// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table
    class="chakra-table searchTable css-0"
  >
    <tbody
      class="css-0"
      data-testid="table-scroll"
    >
      <tr
        class="project-row-0 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AR-ACM0003: Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003: Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2011/05/23 - 2030/05/22"
        >
          2011/05/23 - 2030/05/22
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="127855"
        >
          127,855
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-1 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="GCCM001 v3.0"
        >
          GCCM001 v3.0
        </td>
        <td
          class="css-0"
          title="Renewable energy"
        >
          Renewable energy
        </td>
        <td
          class="css-0"
          title="China"
        >
          China
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/18 - 2027/01/17"
        >
          2017/01/18 - 2027/01/17
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="7400800"
        >
          7,400,800
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-2 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="BCR0001_Quantification of GHG Emission Reductions. GHG Removal activities"
        >
          BCR0001_Quantification of GHG Emission Reductions. GHG Removal activities
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1478495"
        >
          1,478,495
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="397375"
        >
          397,375
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1081120"
        >
          1,081,120
        </td>
      </tr>
      <tr
        class="project-row-3 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/01 - 2037/12/31"
        >
          2018/01/01 - 2037/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="9228132"
        >
          9,228,132
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1057980"
        >
          1,057,980
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-4 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AMS-I.D: Grid connected renewable electricity generation"
        >
          AMS-I.D: Grid connected renewable electricity generation
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Turkey"
        >
          Turkey
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/15 - 2043/01/14"
        >
          2018/01/15 - 2043/01/14
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="446175"
        >
          446,175
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-5 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2019/11/07 - 2024/11/06"
        >
          2019/11/07 - 2024/11/06
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="264382"
        >
          264,382
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-6 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AMS-I.D: Grid connected renewable electricity generation"
        >
          AMS-I.D: Grid connected renewable electricity generation
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/05/20 - 2027/05/19"
        >
          2017/05/20 - 2027/05/19
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="286767"
        >
          286,767
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-7 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2022/01/01 - 2061/12/31"
        >
          2022/01/01 - 2061/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="26919627"
        >
          26,919,627
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-8 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/01 - 2047/12/31"
        >
          2018/01/01 - 2047/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="14840785"
        >
          14,840,785
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-9 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources"
        >
          ACM0002: Grid-connected electricity generation from renewable sources
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          title="Validated"
        >
          Validated
        </td>
        <td
          class="css-rl3ocm"
          title="2022/11/30 - 2032/11/30"
        >
          2022/11/30 - 2032/11/30
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="402234"
        >
          402,234
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-10 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources"
        >
          ACM0002: Grid-connected electricity generation from renewable sources
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2015/11/16 - 2035/11/15"
        >
          2015/11/16 - 2035/11/15
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="21580114"
        >
          21,580,114
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3918965"
        >
          3,918,965
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3263183"
        >
          3,263,183
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="655782"
        >
          655,782
        </td>
      </tr>
      <tr
        class="project-row-11 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="AMS-I.D.: Grid connected renewable electricity generation---Version 18."
        >
          AMS-I.D.: Grid connected renewable electricity generation---Version 18.
        </td>
        <td
          class="css-0"
          title="renewable energy"
        >
          renewable energy
        </td>
        <td
          class="css-0"
          title="Turkey"
        >
          Turkey
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2020/02/17 - 2030/02/16"
        >
          2020/02/17 - 2030/02/16
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="83000"
        >
          83,000
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-12 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="BCR0002_Quantification of GHG Emission Reductions. REDD+ Projects"
        >
          BCR0002_Quantification of GHG Emission Reductions. REDD+ Projects
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3479850"
        >
          3,479,850
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="907026"
        >
          907,026
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="2572824"
        >
          2,572,824
        </td>
      </tr>
      <tr
        class="project-row-13 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects’,Version 2.0"
        >
          GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects’,Version 2.0
        </td>
        <td
          class="css-0"
          title="renewable energy"
        >
          renewable energy
        </td>
        <td
          class="css-0"
          title="China"
        >
          China
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2026/12/31"
        >
          2017/01/01 - 2026/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1750380"
        >
          1,750,380
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-14 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="484767"
        >
          484,767
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="146809"
        >
          146,809
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="337958"
        >
          337,958
        </td>
      </tr>
      <tr
        class="project-row-15 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Approved"
        >
          Approved
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2036/12/31"
        >
          2017/01/01 - 2036/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="10738350"
        >
          10,738,350
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-16 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2019/07/17 - 2024/09/28"
        >
          2019/07/17 - 2024/09/28
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="506177"
        >
          506,177
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-17 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="179669"
        >
          179,669
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="54741"
        >
          54,741
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="124928"
        >
          124,928
        </td>
      </tr>
      <tr
        class="project-row-18 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0001: Flaring or use of landfill gas"
        >
          ACM0001: Flaring or use of landfill gas
        </td>
        <td
          class="css-0"
          title="Water supply; sewerage, waste management and remediation activities"
        >
          Water supply; sewerage, waste management and remediation activities
        </td>
        <td
          class="css-0"
          title="Brazil"
        >
          Brazil
        </td>
        <td
          class="css-0"
          title="Listed"
        >
          Listed
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2046/12/31"
        >
          2017/01/01 - 2046/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="98143"
        >
          98,143
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-19 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2019/11/07 - 2025/03/31"
        >
          2019/11/07 - 2025/03/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="477262"
        >
          477,262
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-20 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT/F-A01: Methodology To Implement GHG Removal Projects Through Reforestation, Forest Restoration and the Establishment of Woody Crops"
        >
          M/UT/F-A01: Methodology To Implement GHG Removal Projects Through Reforestation, Forest Restoration and the Establishment of Woody Crops
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Brazil"
        >
          Brazil
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/07/01 - 2037/06/30"
        >
          2017/07/01 - 2037/06/30
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="54205297"
        >
          54,205,297
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly with hover 1`] = `
<div>
  <table
    class="chakra-table searchTable css-0"
  >
    <tbody
      class="css-0"
      data-testid="table-scroll"
    >
      <tr
        class="project-row-0 css-mii0oe hoverGreen"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AR-ACM0003: Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003: Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2011/05/23 - 2030/05/22"
        >
          2011/05/23 - 2030/05/22
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="127855"
        >
          127,855
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-1 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="GCCM001 v3.0"
        >
          GCCM001 v3.0
        </td>
        <td
          class="css-0"
          title="Renewable energy"
        >
          Renewable energy
        </td>
        <td
          class="css-0"
          title="China"
        >
          China
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/18 - 2027/01/17"
        >
          2017/01/18 - 2027/01/17
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="7400800"
        >
          7,400,800
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-2 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="BCR0001_Quantification of GHG Emission Reductions. GHG Removal activities"
        >
          BCR0001_Quantification of GHG Emission Reductions. GHG Removal activities
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1478495"
        >
          1,478,495
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="397375"
        >
          397,375
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1081120"
        >
          1,081,120
        </td>
      </tr>
      <tr
        class="project-row-3 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/01 - 2037/12/31"
        >
          2018/01/01 - 2037/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="9228132"
        >
          9,228,132
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1057980"
        >
          1,057,980
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-4 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AMS-I.D: Grid connected renewable electricity generation"
        >
          AMS-I.D: Grid connected renewable electricity generation
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Turkey"
        >
          Turkey
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/15 - 2043/01/14"
        >
          2018/01/15 - 2043/01/14
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="446175"
        >
          446,175
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-5 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2019/11/07 - 2024/11/06"
        >
          2019/11/07 - 2024/11/06
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="264382"
        >
          264,382
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-6 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AMS-I.D: Grid connected renewable electricity generation"
        >
          AMS-I.D: Grid connected renewable electricity generation
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/05/20 - 2027/05/19"
        >
          2017/05/20 - 2027/05/19
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="286767"
        >
          286,767
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-7 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/UT-REDD+: Methodology For the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2022/01/01 - 2061/12/31"
        >
          2022/01/01 - 2061/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="26919627"
        >
          26,919,627
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-8 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2018/01/01 - 2047/12/31"
        >
          2018/01/01 - 2047/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="14840785"
        >
          14,840,785
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-9 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources"
        >
          ACM0002: Grid-connected electricity generation from renewable sources
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          title="Validated"
        >
          Validated
        </td>
        <td
          class="css-rl3ocm"
          title="2022/11/30 - 2032/11/30"
        >
          2022/11/30 - 2032/11/30
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="402234"
        >
          402,234
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-10 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources"
        >
          ACM0002: Grid-connected electricity generation from renewable sources
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2015/11/16 - 2035/11/15"
        >
          2015/11/16 - 2035/11/15
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="21580114"
        >
          21,580,114
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3918965"
        >
          3,918,965
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3263183"
        >
          3,263,183
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="655782"
        >
          655,782
        </td>
      </tr>
      <tr
        class="project-row-11 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="AMS-I.D.: Grid connected renewable electricity generation---Version 18."
        >
          AMS-I.D.: Grid connected renewable electricity generation---Version 18.
        </td>
        <td
          class="css-0"
          title="renewable energy"
        >
          renewable energy
        </td>
        <td
          class="css-0"
          title="Turkey"
        >
          Turkey
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2020/02/17 - 2030/02/16"
        >
          2020/02/17 - 2030/02/16
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="83000"
        >
          83,000
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-12 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="BCR0002_Quantification of GHG Emission Reductions. REDD+ Projects"
        >
          BCR0002_Quantification of GHG Emission Reductions. REDD+ Projects
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="3479850"
        >
          3,479,850
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="907026"
        >
          907,026
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="2572824"
        >
          2,572,824
        </td>
      </tr>
      <tr
        class="project-row-13 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Global Carbon Council"
        >
          Global Carbon Council
        </td>
        <td
          class="css-0"
          title="GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects’,Version 2.0"
        >
          GCCM001 “Methodology for Grid Connected Renewable Energy Generation Projects’,Version 2.0
        </td>
        <td
          class="css-0"
          title="renewable energy"
        >
          renewable energy
        </td>
        <td
          class="css-0"
          title="China"
        >
          China
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2026/12/31"
        >
          2017/01/01 - 2026/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="1750380"
        >
          1,750,380
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-14 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="484767"
        >
          484,767
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="146809"
        >
          146,809
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="337958"
        >
          337,958
        </td>
      </tr>
      <tr
        class="project-row-15 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Approved"
        >
          Approved
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2036/12/31"
        >
          2017/01/01 - 2036/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="10738350"
        >
          10,738,350
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-16 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2019/07/17 - 2024/09/28"
        >
          2019/07/17 - 2024/09/28
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="506177"
        >
          506,177
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-17 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="Biocarbon Registry S.A.S"
        >
          Biocarbon Registry S.A.S
        </td>
        <td
          class="css-0"
          title="AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003. CDM Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture, forestry and other land uses (AFOLU)"
        >
          Agriculture, forestry and other land uses (AFOLU)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="179669"
        >
          179,669
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="54741"
        >
          54,741
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="124928"
        >
          124,928
        </td>
      </tr>
      <tr
        class="project-row-18 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0001: Flaring or use of landfill gas"
        >
          ACM0001: Flaring or use of landfill gas
        </td>
        <td
          class="css-0"
          title="Water supply; sewerage, waste management and remediation activities"
        >
          Water supply; sewerage, waste management and remediation activities
        </td>
        <td
          class="css-0"
          title="Brazil"
        >
          Brazil
        </td>
        <td
          class="css-0"
          title="Listed"
        >
          Listed
        </td>
        <td
          class="css-rl3ocm"
          title="2017/01/01 - 2046/12/31"
        >
          2017/01/01 - 2046/12/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="98143"
        >
          98,143
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-19 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector"
        >
          Methodological guide for the certification of emissions reduced by the implementation of operational improvement projects in the hydrocarbons sector
        </td>
        <td
          class="css-0"
          title="Fugitive emissions from fuel (solid, oil and gas)"
        >
          Fugitive emissions from fuel (solid, oil and gas)
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2019/11/07 - 2025/03/31"
        >
          2019/11/07 - 2025/03/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="477262"
        >
          477,262
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
      <tr
        class="project-row-20 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/UT/F-A01: Methodology To Implement GHG Removal Projects Through Reforestation, Forest Restoration and the Establishment of Woody Crops"
        >
          M/UT/F-A01: Methodology To Implement GHG Removal Projects Through Reforestation, Forest Restoration and the Establishment of Woody Crops
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Brazil"
        >
          Brazil
        </td>
        <td
          class="css-0"
          title="Registered"
        >
          Registered
        </td>
        <td
          class="css-rl3ocm"
          title="2017/07/01 - 2037/06/30"
        >
          2017/07/01 - 2037/06/30
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="54205297"
        >
          54,205,297
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
        >
          <p
            class="chakra-text css-132cox5"
          >
            --
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
